--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,29 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@300;0,480;0,788;1,308;1,400;1,700&display=swap');  
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@tailwind base;  
+@tailwind components;  
+@tailwind utilities;  
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+:root {  
+  --background: #ffffff;  
+  --foreground: #171717;  
+}  
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+@media (prefers-color-scheme: dark) {  
+  :root {  
+    --background: #0a0a0a;  
+    --foreground: #ededed;  
+  }  
+}  
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body {  
+  color: var(--foreground);  
+  background: var(--background);  
+  font-family: 'Comic Neue', Arial, Helvetica, sans-serif;  
+}  
+
+@layer utilities {  
+  .text-balance {  
+    text-wrap: balance;  
+  }  
 }
